==========================
What's new in ElasticUtils
==========================

.. contents::
   :local:


Version 0.10: In development
============================

**API-breaking changes:**

**Changes:**

* Python 3 support (Python >= 3.3)


Version 0.9.1: April 7th, 2014
==============================

**Changes:**

* **Fixed bug with facets that are both sized and filtered**


Version 0.9: April 3rd, 2014
============================

.. Note::

   This is a *big* change. We switched from pyelasticsearch to
   elasticsearch-py. The Elasticsearch object you get back from
   ``get_es`` is pretty different. When you upgrade to v0.9, you'll
   probably need to rewrite code.

   If this terrifies you, read through these notes carefully and/or
   stay with v0.8.


.. Note::

   This version supports Elasticsearch 0.20 through 0.90. It does not
   yet support Elasticsearch 1.0. Support for 1.0 and later will be in
   a later version of ElasticUtils.


**API-breaking changes:**

* **elasticsearch-py >= v0.4.3 and < 1.0 required.**

  ElasticUtils now uses elasticsearch-py.

  .. Note::

     You have to use elasticsearch-py >= v0.4.3 and < 1.0. ElasticUtils
     does not support elasticsearch-py 1.0. Support for later versions
     will come in a future ElasticUtils release.

* **pyelasticsearch no longer needed**

  You can remove pyelasticsearch and its requirements.

* **thrift now supported!**

  elasticsearch-py supports http, thrift and memcache protocols, so
  you can use any of them now.

* **pyelasticsearch -> elasticsearch-py changes.**

  If you called ``elasticutils.get_es()`` and got a pyelasticsearch
  `ElasticSearch` object and did things with that (create index, create
  mappings, delete indexes, indexing, cluster health, ...), you're going
  to need to make some changes.

  You can either:

  1. rewrite that code to use elasticsearch-py `Elasticsearch`
     equivalents, or
