@@ -4,15 +4,6 @@
  Installation
 ==============
 
-.. Warning::
-
-   ElasticUtils doesn't work well with Elasticsearch 0.19.9. Don't use
-   that version---newer or older versions are fine.
-
-   https://github.com/elasticsearch/elasticsearch/issues/2205
-     Elasticsearch bug with ``_all``.
-
-
 Requirements
 ============
 
